# artemis-crm-backend

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  create_db.py  create_superuser.py  docker-compose.yml  pyproject.toml  railway.toml  test.db
alembic/: env.py
alembic/versions/: 20260425_01_initial_auth_schema.py  20260425_02_add_is_admin_to_users.py  20260427_01_create_user_profiles.py  20260427_02_create_permission_groups.py  20260427_03_create_contact_messages.py  20260427_04_add_default_permission_group.py  c6c56dfb13ea_adicionando_suporte_para_controle_de_.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  contact_messages.py  permission_groups.py  user_profile.py
app/core/: database.py  security.py
app/models/: __init__.py  auth_session.py  contact_message.py  permission_group.py  user.py  user_profile.py
app/schemas/: auth.py  contact_message.py  permission_group.py  user_profile.py
app/services/: auth_service.py  contact_message_service.py  permission_group_service.py  user_profile_service.py
app/utils/: superuser.py
tests/: conftest.py
tests/api/routes/: test_auth.py  test_contact_messages.py  test_permission_groups.py  test_user_profile.py
tests/core/: test_security.py
tests/models/: test_user.py
tests/services/: test_auth_service.py  test_contact_message_service.py  test_permission_group_service.py  test_user_profile_service.py
